gap on gallery fixed and is set to 20px

--- a/src/Painting/Paintings.module.scss
+++ b/src/Painting/Paintings.module.scss
@@ -1,7 +1,7 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: 20px;
   @media screen and (max-width: 768px) {
     grid-template-columns: repeat(2, 1fr);
   }
